# bre_utils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_base.cpp
breutil/: block_queue.hpp  buffer.hpp  defer.hpp  easy_test.hpp  enum.hpp  ostream_operator.hpp
breutil/test/: test_block_queue.hpp  test_easy_test.hpp
breutils/: singleton.hpp
cmake/: compiler.cmake  lib.cmake  option.cmake  template.cmake  test.cmake  windows.cmake
test/: CMakeLists.txt
test/tests/: test_buffer.cpp
